# Sistema-Basado-en-Conocimiento-del-Dominio-Culinario

./: .gitmodules  README.md  pyproject.toml  run_tests.py
doc/: doc-bc.txt  doc-clases.txt  doc-manejo_errores.txt  doc-motor.txt
doc/sbc/: doc-cli.txt  doc-parserSBC.txt
kb/: bc.text  bc.txt
sbc/: clases.py  cli.py  manejo_errores.py  motor.py  parserSBC.py
tests/: comun.txt  corregir.sh  temp_bc_small.txt  test_integracion.py  test_opcionales.py  test_parser.py
